+image +name change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Jon Barron</title>
+    <title>Aniket Konkar</title>
 
     <meta name="author" content="Aniket Konkar">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Jon Barron
+                  Aniket Konkar
                 </p>
                 <p>
 		I graduated with an MS in Computer Science from George Washington University. Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events, under the supervision of Prof. Robert Pless.
@@ -35,7 +35,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/AK.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
+                <a href="images/AK.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/AK.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
