+lots of changes

--- a/index.html
+++ b/index.html
@@ -1,162 +1,118 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Aniket Konkar</title>
+        <meta name="author" content="Aniket Konkar">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    </head>
+    <body>
+        <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+                <tr style="padding:0px">
+                    <td style="padding:0px">
+                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                            <tbody>
+                                <tr style="padding:0px">
+                                    <td style="padding:2.5%;width:63%;vertical-align:middle">
+                                        <p class="name" style="text-align: center;">
+                                            Aniket Konkar
+                                        </p>
+                                        <p>
+                                            I am interested in computer vision (particularly event-based vision), perception systems, robotics, and neuromorphic computing. 
+                                            Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events. Supervisor: Prof. Robert Pless.
+                                        </p>
+                                        <p>
+                                          I graduated with an MS in Computer Science from George Washington University. During my program, I worked for two years as a Research Assistant under the supervision of Prof. Rob Olsen, gaining experience in data analysis and modeling. I also have two years of professional experience as a Software Engineer.
+                                        </p>
+                                        <p style="text-align:center">
+                                            <a href="mailto:aniket.konkar@gwu.edu">Email</a> &nbsp;/&nbsp;
+                                            <a href="data/Konkar_Aniket_CV.pdf">CV</a> &nbsp;/&nbsp;
+                                            <a href="https://www.github.com/insp7/">Github</a> &nbsp;/&nbsp;
+                                            <a href="https://www.linkedin.com/in/aniket-konkar16/">Linkedin</a>
+                                        </p>
+                                    </td>
+                                    <td style="padding:2.5%;width:37%;max-width:37%">
+                                        <a href="images/ak.PNG"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%; border: 3px solid #000;" alt="profile photo" src="images/ak.PNG" class="hoverZoomLink"></a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                            <tbody>
+                                <tr>
+                                    <td style="padding:16px;width:100%;vertical-align:middle">
+                                        <h2>Research</h2>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                            <tbody>
+                                <!-- Paper 1 -->
+                                <tr>
+                                    <td style="padding:16px;width:20%;vertical-align:middle">
+                                        <img src="images/Simple_Transformer_model_architecture.PNG" width="100%">
+                                    </td>
+                                    <td style="padding:8px;width:80%;vertical-align:middle">
+                                        <a href="https://openaccess.thecvf.com/content/WACV2025W/EVGEN/html/Kumar_Simple_Transformer_with_Single_Leaky_Neuron_for_Event_Vision_WACVW_2025_paper.html">
+                                        <span class="papertitle">Simple Transformer with Single Leaky Neuron for Event Vision</span>
+                                        </a>
+                                        <br>
+                                        <a href="https://himanshu9084.github.io/">Himanshu Kumar</a>,
+                                        <strong>Aniket Konkar</strong>
+                                        <br>
+                                        <em>WACV Workshop</em>, 2025
+                                        <br>
+                                        <a href="data/WACV_Workshop_2025_42x84_poster.pdf">Poster</a>
+                                        /
+                                        <a href="https://openaccess.thecvf.com/content/WACV2025W/EVGEN/papers/Kumar_Simple_Transformer_with_Single_Leaky_Neuron_for_Event_Vision_WACVW_2025_paper.pdf">PDF</a>
+                                        /
+                                        <a href="https://github.com/himanshu9084/Simple_transformer_leaky_neuron">Code</a>
+                                        <p>
+                                            This paper presents a lightweight Transformer combining a ResNet feature extractor, a spiking PLIF neuron, and multi-head attention for event-based vision, achieving 98.3% on DVS Gesture, 99.3% on N-MNIST, and 75.9% on CIFAR10-DVS with only 15.3M parameters and 1.82G SOPs.
+                                        </p>
+                                    </td>
+                                </tr>
 
-    <title>Aniket Konkar</title>
-
-    <meta name="author" content="Aniket Konkar">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    
-  </head>
-
-  <body>
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-      <tr style="padding:0px">
-        <td style="padding:0px">
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr style="padding:0px">
-              <td style="padding:2.5%;width:63%;vertical-align:middle">
-                <p class="name" style="text-align: center;">
-                  Aniket Konkar
-                </p>
-                <p>
-		I graduated with an MS in Computer Science from George Washington University. Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events, under the supervision of Prof. Robert Pless.
-                </p>
-                <p style="text-align:center">
-                  <a href="mailto:aniket.konkar@gwu.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="data/Konkar_Aniket_CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
-                  <a href="https://scholar.google.com/citations?user=KEKRlR0AAAAJ&hl">Scholar</a> &nbsp;/&nbsp;
-                  <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
-                  <a href="https://www.github.com/insp7/">Github</a>
-                </p>
-              </td>
-              <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/AK.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/AK.jpg" class="hoverZoomLink"></a>
-              </td>
-            </tr>
-          </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-              <tr>
-              <td style="padding:16px;width:100%;vertical-align:middle">
-                <h2>Research</h2>
-                <p>
-                  I am interested in computer vision (particularly event-based vision), perception systems, robotics, and neuromorphic computing.
-                </p>
-              </td>
-            </tr>
-          </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-<tr onmouseout="nexf_stop()" onmouseover="nexf_start()">
-      <td style="padding:16px;width:20%;vertical-align:middle">
-        <div class="one">
-          <div class="two" id='nexf_image'>
-					  <img src='images/nexf_after.jpg' width=100%>
-					</div>
-          <img src='images/nexf_before.jpg' width=100%>
-        </div>
-        <script type="text/javascript">
-          function nexf_start() {
-            document.getElementById('nexf_image').style.opacity = "1";
-          }
-
-          function nexf_stop() {
-            document.getElementById('nexf_image').style.opacity = "0";
-          }
-          nexf_stop()
-        </script>
-      </td>
-      <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://m-niemeyer.github.io/nexf/">
-          <span class="papertitle">NExF: Learning Neural Exposure Fields for View Synthesis</span>
-        </a>
-        <br>
-        <a href="https://m-niemeyer.github.io/">Michael Niemeyer</a>,
-        <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
-        <a href="http://www.lix.polytechnique.fr/Labo/Marie-Julie.RAKOTOSAONA/">Marie-Julie Rakotosaona</a>,
-        <a href="https://moechsle.github.io">Michael Oechsle</a>,
-        <a href="https://ait.ethz.ch/people/ctsalico">Christina Tsalicoglou</a>,
-        <a href="https://scholar.google.com/citations?user=ml3laqEAAAAJ&hl=ja">Keisuke Tateno</a>,
-        <strong>Jonathan T. Barron</strong>,
-        <a href="https://federicotombari.github.io/">Federico Tombari</a>
-        <br>
-        <em>NeurIPS</em>, 2025
-        <br>
-        <a href="https://m-niemeyer.github.io/nexf/">project page</a>
-        /
-        <a href="https://arxiv.org/abs/2510.08279">arXiv</a>
-        <p></p>
-        <p>
-		Learning a neural field that optimizes exposure for each 3D point enables high-quality 3D-consistent view synthesis despite extreme exposure variation during capture.
-        </p>
-      </td>
-    </tr>
-	
-    <tr onmouseout="bolt3d_stop()" onmouseover="bolt3d_start()"  bgcolor="#ffffd0">
-      <td style="padding:16px;width:20%;vertical-align:middle">
-        <div class="one">
-          <div class="two" id='bolt3d_image'><video  width=100% height=100% muted autoplay loop>
-          <source src="images/bolt3d.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-
-          </video></div>
-          <img src='images/bolt3d.jpg' width="160">
-        </div>
-        <script type="text/javascript">
-          function bolt3d_start() {
-            document.getElementById('bolt3d_image').style.opacity = "1";
-          }
-
-          function bolt3d_stop() {
-            document.getElementById('bolt3d_image').style.opacity = "0";
-          }
-          bolt3d_stop()
-        </script>
-      </td>
-      <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://szymanowiczs.github.io/bolt3d">
-          <span class="papertitle">Bolt3D: Generating 3D Scenes in Seconds</span>
-        </a>
-        <br>
-        <a href="https://szymanowiczs.github.io/">Stanislaw Szymanowicz</a>,
-        <a href="https://jasonyzhang.com">Jason Y. Zhang</a>,
-        <a href="https://pratulsrinivasan.github.io">Pratul Srinivasan</a>,
-        <a href="https://ruiqigao.github.io">Ruiqi Gao</a>,
-        <a href="https://github.com/ArthurBrussee">Arthur Brussee</a>,
-        <a href="https://holynski.org">Aleksander Holynski</a>,
-        <a href="https://ricardomartinbrualla.com">Ricardo Martin-Brualla</a>,
-		<strong>Jonathan T. Barron</strong>,
-        <a href="https://henzler.github.io">Philipp Henzler</a>
-        <br>
-        <em>ICCV</em>, 2025
-        <br>
-        <a href="https://szymanowiczs.github.io/bolt3d">project page</a>
-        /
-        <a href="https://szymanowiczs.github.io/bolt3d">arXiv</a>
-        <p></p>
-        <p>
-		By training a latent diffusion model to directly output 3D Gaussians we enable fast (~6 seconds on a single GPU) feed-forward 3D scene generation.
-        </p>
-      </td>
-    </tr>
-          </tbody></table>
-
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-              <td style="padding:0px">
-                <br>
-                <p style="text-align:right;font-size:small;">
-                  Feel free to steal this website's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>. <strong>Do not</strong> scrape the HTML from this page itself, as it includes analytics tags that you do not want on your own website &mdash; use the github code instead. Also, consider using <a href="https://leonidk.com/">Leonid Keselman</a>'s <a href="https://github.com/leonidk/new_website">Jekyll fork</a> of this page.
-                </p>
-              </td>
-            </tr>
-          </tbody></table>
-        </td>
-      </tr>
-    </table>
-  </body>
+                                <!-- Paper 2 -->
+                                 <tr>
+                                    <td style="padding:16px;width:20%;vertical-align:middle">
+                                        <img src="images/eeg_and_transformer_papers_2019_2024.PNG" width="100%">
+                                    </td>
+                                    <td style="padding:8px;width:80%;vertical-align:middle">
+                                      <a href="https://faculty.cs.gwu.edu/xiaodongqu/papers/HCII_2025_1286_Transformer_EEG_review.pdf">
+                                        <span class="papertitle">A Review of Transformer-Based and Hybrid Deep Learning Approaches for EEG Analysis</span>
+                                      </a>
+                                      <br>
+                                      <strong>Aniket Konkar</strong>,
+                                      <a href="https://faculty.cs.gwu.edu/xiaodongqu/">Xiaodong Qu</a>
+                                      <br>
+                                      <em>HCI International</em>, 2025
+                                      <br>
+                                      <p>
+                                          A review highlighting how transformer-based and hybrid deep learning models advance EEG decoding across tasks while identifying key trends, gaps, and future research directions.
+                                      </p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                            <tbody>
+                                <tr>
+                                    <td style="padding:0px">
+                                        <br>
+                                        <p style="text-align:right;font-size:small;">
+                                            Thank you to <a href="https://jonbarron.info/">Jon Barron</a> for this awesome profile template.
+                                        </p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+        </table>
+    </body>
 </html>
