+'paper' word, icons, prof. links, -unused directories; changed research -> publications, removed vertical padding after publications;

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Aniket Konkar">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
@@ -22,16 +23,16 @@
                                         </p>
                                         <p>
                                             I am interested in computer vision (particularly event-based vision), perception systems, robotics, and neuromorphic computing. 
-                                            Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events. Supervisor: Prof. Robert Pless.
+                                            Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events. Supervisor: Prof. <a href="https://cs.engineering.gwu.edu/robert-pless">Robert Pless</a>.
                                         </p>
                                         <p>
-                                          I graduated with an MS in Computer Science from George Washington University. During my program, I worked for two years as a Research Assistant under the supervision of Prof. Rob Olsen, gaining experience in data analysis and modeling. I also have two years of professional experience as a Software Engineer.
+                                          I graduated with an MS in Computer Science from George Washington University. During my program, I worked for two years as a Research Assistant under the supervision of Prof. <a href="https://gwipp.gwu.edu/rob-olsen-research-professor">Rob Olsen</a>, gaining experience in data analysis and modeling. I also have two years of professional experience as a Software Engineer.
                                         </p>
                                         <p style="text-align:center">
-                                            <a href="mailto:aniket.konkar@gwu.edu">Email</a> &nbsp;/&nbsp;
-                                            <a href="data/Konkar_Aniket_CV.pdf">CV</a> &nbsp;/&nbsp;
-                                            <a href="https://www.github.com/insp7/">Github</a> &nbsp;/&nbsp;
-                                            <a href="https://www.linkedin.com/in/aniket-konkar16/">Linkedin</a>
+                                            <a href="mailto:aniket.konkar@gwu.edu"><i class="fa-solid fa-envelope email-icon"></i>Email</a> &nbsp;/&nbsp;
+                                            <a href="data/Konkar_Aniket_CV.pdf"><i class="fa-solid fa-file-lines cv-icon"></i>CV</a> &nbsp;/&nbsp;
+                                            <a href="https://www.github.com/insp7/"><i class="fa-brands fa-github github-icon"></i>GitHub</a> &nbsp;/&nbsp;
+                                            <a href="https://www.linkedin.com/in/aniket-konkar16/"><i class="fa-brands fa-linkedin linkedin-icon"></i>LinkedIn</a>
                                         </p>
                                     </td>
                                     <td style="padding:2.5%;width:37%;max-width:37%">
@@ -40,15 +41,8 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                            <tbody>
-                                <tr>
-                                    <td style="padding:16px;width:100%;vertical-align:middle">
-                                        <h2>Research</h2>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+
+                        <h2 style="padding:0 16px; width:100%; vertical-align:middle;">Publications</h2>
                         <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                             <tbody>
                                 <!-- Paper 1 -->
@@ -93,7 +87,7 @@
                                       <em>HCI International</em>, 2025
                                       <br>
                                       <p>
-                                          A review highlighting how transformer-based and hybrid deep learning models advance EEG decoding across tasks while identifying key trends, gaps, and future research directions.
+                                          A review paper highlighting how transformer-based and hybrid deep learning models advance EEG decoding across tasks while identifying key trends, gaps, and future research directions.
                                       </p>
                                     </td>
                                 </tr>
