--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                                         </p>
                                         <p>
                                             I am interested in computer vision (particularly event-based vision), perception systems, robotics, and neuromorphic computing. 
-                                            Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events. Supervisor: Prof. <a href="https://cs.engineering.gwu.edu/robert-pless">Robert Pless</a>.
+                                            Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events. I am fortunate to be supervised by Prof. <a href="https://cs.engineering.gwu.edu/robert-pless">Robert Pless</a>.
                                         </p>
                                         <p>
-                                          I graduated with an MS in Computer Science from George Washington University. During my program, I worked for two years as a Research Assistant under the supervision of Prof. <a href="https://gwipp.gwu.edu/rob-olsen-research-professor">Rob Olsen</a>, gaining experience in data analysis and modeling. I also have two years of professional experience as a Software Engineer.
+                                          I graduated with an MS in Computer Science from George Washington University. I enjoyed working as a research assistant under the supervision of Prof. <a href="https://gwipp.gwu.edu/rob-olsen-research-professor">Rob Olsen</a>, gaining experience in data analysis and modeling. I also have two years of professional experience as a Software Engineer.
                                         </p>
                                         <p style="text-align:center">
                                             <a href="mailto:aniket.konkar@gwu.edu"><i class="fa-solid fa-envelope email-icon"></i>Email</a> &nbsp;/&nbsp;
@@ -99,7 +99,7 @@
                                     <td style="padding:0px">
                                         <br>
                                         <p style="text-align:right;font-size:small;">
-                                            Thank you to <a href="https://jonbarron.info/">Jon Barron</a> for this awesome profile template.
+                                            Thank you to <a href="https://jonbarron.info/">Jon Barron</a> for this awesome template.
                                         </p>
                                     </td>
                                 </tr>
