--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                         </p>
                                     </td>
                                     <td style="padding:2.5%;width:37%;max-width:37%">
-                                        <a href="images/ak.PNG"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%; border: 3px solid #000;" alt="profile photo" src="images/ak.PNG" class="hoverZoomLink"></a>
+                                        <a href="images/ak.PNG"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%; border: 3px solid #dcdcdc;" alt="profile photo" src="images/ak.PNG" class="hoverZoomLink"></a>
                                     </td>
                                 </tr>
                             </tbody>
@@ -66,7 +66,8 @@
                                         /
                                         <a href="https://github.com/himanshu9084/Simple_transformer_leaky_neuron">Code</a>
                                         <p>
-                                            This paper presents a lightweight Transformer combining a ResNet feature extractor, a spiking PLIF neuron, and multi-head attention for event-based vision, achieving 98.3% on DVS Gesture, 99.3% on N-MNIST, and 75.9% on CIFAR10-DVS with only 15.3M parameters and 1.82G SOPs.
+                                            This paper presents a lightweight Transformer combining a ResNet feature extractor, a spiking PLIF neuron, and multi-head attention for event-based vision, achieving 98.3% on DVS Gesture, 99.3% on N-MNIST, and 75.9% on CIFAR10-DVS.
+                                            Our model outperforms several event-driven and spiking architectures — including transformer-based designs — while matching the accuracy of far more complex models at a fraction of their computational cost. Despite comparable performance, it uses 4× fewer parameters (15.3M vs. 60–66M) and achieves inference with over an order-of-magnitude lower synaptic operations (1.82G vs. 9.74–65.28G SOPs).
                                         </p>
                                     </td>
                                 </tr>
