wacv workshop paper desc updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                         <a href="https://github.com/himanshu9084/Simple_transformer_leaky_neuron">Code</a>
                                         <p>
                                             This paper presents a lightweight Transformer combining a ResNet feature extractor, a spiking PLIF neuron, and multi-head attention for event-based vision, achieving 98.3% on DVS Gesture, 99.3% on N-MNIST, and 75.9% on CIFAR10-DVS.
-                                            Our model outperforms several event-driven and spiking architectures — including transformer-based ones — while matching the accuracy of far more complex models at a fraction of their computational cost. Despite comparable performance, it uses 4× fewer parameters (15.3M vs. 60–66M) and achieves inference with over an order-of-magnitude lower synaptic operations (1.82G vs. 9.74–65.28G SOPs).
+                                            Our model outperforms several event-driven and spiking architectures — including transformer-based ones — while matching the accuracy of far more complex models at a fraction of their computational cost. Despite comparable performance, it uses 4× fewer parameters than transformer-based spiking models (15.3M vs. 60–66M) and achieves inference with over an order of magnitude fewer synaptic operations (1.82G vs. 9.74–65.28G SOPs).
                                         </p>
                                     </td>
                                 </tr>
