--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                                           I graduated with an MS in Computer Science from George Washington University. I enjoyed working as a research assistant under the supervision of Prof. <a href="https://gwipp.gwu.edu/rob-olsen-research-professor">Rob Olsen</a>, gaining experience in data analysis and modeling. I also have two years of professional experience as a Software Engineer.
                                         </p>
                                         <p style="text-align:center">
-                                            <a href="mailto:aniket.konkar@gwu.edu"><i class="fa-solid fa-envelope email-icon"></i>Email</a> &nbsp;/&nbsp;
-                                            <a href="data/Konkar_Aniket_CV.pdf"><i class="fa-solid fa-file-lines cv-icon"></i>CV</a> &nbsp;/&nbsp;
-                                            <a href="https://www.github.com/insp7/"><i class="fa-brands fa-github github-icon"></i>GitHub</a> &nbsp;/&nbsp;
-                                            <a href="https://www.linkedin.com/in/aniket-konkar16/"><i class="fa-brands fa-linkedin linkedin-icon"></i>LinkedIn</a>
+                                            <a href="mailto:aniket.konkar@gwu.edu"><i class="fa-solid"></i>Email</a> &nbsp;/&nbsp;
+                                            <a href="data/Konkar_Aniket_CV.pdf"><i class="fa-solid"></i>CV</a> &nbsp;/&nbsp;
+                                            <a href="https://www.github.com/insp7/"><i class="fa-brands"></i>GitHub</a> &nbsp;/&nbsp;
+                                            <a href="https://www.linkedin.com/in/aniket-konkar16/"><i class="fa-brands"></i>LinkedIn</a>
                                         </p>
                                     </td>
                                     <td style="padding:2.5%;width:37%;max-width:37%">
