--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                             Aniket Konkar
                                         </p>
                                         <p>
-                                            I am interested in computer vision (particularly event-based vision), perception systems, robotics, and neuromorphic computing. 
+                                            I am interested in computer vision, robotics, and neuromorphic computing. 
                                             Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli and exploring methods to reconstruct the original acoustic signals from these events. I am fortunate to be supervised by Prof. <a href="https://cs.engineering.gwu.edu/robert-pless">Robert Pless</a>.
                                         </p>
                                         <p>
