--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
                                 </tr>
                             </tbody>
                         </table>
+
+                        <h2 style="padding:0 16px; width:100%; vertical-align:middle;">Notes & Experiments</h2>
+                        <table style="width:100%;border:0;border-spacing:0 8px;border-collapse:separate;">
+                            <tr>
+                                <td style="padding:8px 16px;">
+                                <a href="posts/seeing-motion-from-sound.html">
+                                    <span class="papertitle">Seeing Motion from Sound with Event Cameras</span>
+                                </a>
+                                <br>
+                                <span style="font-size:14px;color:#666;">
+                                    Exploratory observation using a Prophesee EVK4 event camera
+                                </span>
+                                </td>
+                            </tr>
+                        </table>
+
                         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                             <tbody>
                                 <tr>
