added scholar link

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                                         <p style="text-align:center">
                                             <a href="mailto:aniket.konkar@gwu.edu"><i class="fa-solid"></i>Email</a> &nbsp;/&nbsp;
                                             <a href="data/Konkar_Aniket_CV.pdf"><i class="fa-solid"></i>CV</a> &nbsp;/&nbsp;
+                                            <a href="https://scholar.google.com/citations?user=KEKRlR0AAAAJ&hl=en"><i class="fa-brands"></i>Scholar</a> &nbsp;/&nbsp;
                                             <a href="https://www.github.com/insp7/"><i class="fa-brands"></i>GitHub</a> &nbsp;/&nbsp;
                                             <a href="https://www.linkedin.com/in/aniket-konkar16/"><i class="fa-brands"></i>LinkedIn</a>
+                                            
                                         </p>
                                     </td>
                                     <td style="padding:2.5%;width:37%;max-width:37%">
