updated bio desc

--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
     <!-- Bio is now its own block (so we can place it AFTER photo on mobile) -->
     <div class="top-bio bio">
       <p>
-        I am interested in computer vision, robotics, and neuromorphic computing.
-        Currently, I'm working on creating a dataset of event camera recordings of objects responding to sound stimuli
-        and exploring methods to reconstruct the original acoustic signals from these events. I am fortunate to be
-        supervised by Prof. <a href="https://cs.engineering.gwu.edu/robert-pless">Robert Pless</a>.
+        My research interests span computer vision, robotics, and neuromorphic computing. Currently, I am 
+        working on creating a dataset of Event camera recordings of objects responding to sound stimuli, 
+        where audio is intentionally not captured, and exploring methods to reconstruct the underlying 
+        acoustic signals from these events. I am fortunate to be supervised by Prof. 
+        <a href="https://cs.engineering.gwu.edu/robert-pless">Robert Pless</a>. 
       </p>
 
       <p>
-        I graduated with an MS in Computer Science from George Washington University. I enjoyed working as a research assistant
-        under the supervision of Prof. <a href="https://gwipp.gwu.edu/rob-olsen-research-professor">Rob Olsen</a>, gaining experience
-        in data analysis and modeling. I also have two years of professional experience as a Software Engineer.
+        I graduated with an MS in Computer Science from The George Washington University. I also spent two 
+        years as a research assistant, working on data analysis and statistical modeling under the supervision 
+        of Prof. <a href="https://gwipp.gwu.edu/rob-olsen-research-professor">Rob Olsen</a>. In addition, I have two years of professional experience as a software engineer, with 
+        a focus on building reliable and well-engineered systems.
       </p>
     </div>
   </div>
