--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                         <p class="paper-desc">
                                             This paper introduces a lightweight Transformer for event-based vision that combines a ResNet 
                                             feature extractor, a spiking PLIF neuron, and multi-head attention, achieving 98.3% on DVS Gesture, 
-                                            99.3% on N-MNIST, and 75.9% on CIFAR10-DVS. The model outperforms several event-driven and spiking 
+                                            99.3% on N-MNIST, and 75.9% on CIFAR10-DVS. Our model outperforms several event-driven and spiking 
                                             architectures—including transformer-based ones—while matching the accuracy of far more complex models 
                                             at a fraction of the computational cost, using 4× fewer parameters (15.3M vs. 60–66M) and over an 
                                             order of magnitude fewer synaptic operations (1.82G vs. 9.74–65.28G SOPs).
